# shorty

./: README.md  docker-compose.yml  pyproject.toml
backend/: app.py  models.py  routes.py
